[package]
name = "tetris_bot"
version = "0.1.0"
edition = "2021"
description = "High-performance TETR.IO bot using screen capture and Cold Clear AI"

[dependencies]
# Screen capture — DXGI Desktop Duplication wrapper (actively maintained, zero-copy)
dxgi-capture-rs = "1.2"

# Cold Clear Tetris AI (archived but still the strongest open-source engine)
cold-clear = { git = "https://github.com/MinusKelvin/cold-clear" }
libtetris = { git = "https://github.com/MinusKelvin/cold-clear" }

# Windows APIs for input simulation (SendInput) and window management
windows = { version = "0.58", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
] }

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Randomness for humanization
rand = "0.8"
rand_distr = "0.4"

# Image encoding (for calibration screenshot saving)
image = "0.25"

# GUI
eframe = "0.29"

# Error handling
anyhow = "1"
thiserror = "2"

[[bin]]
name = "tetris_bot"
path = "src/main.rs"

[[bin]]
name = "calibrate"
path = "src/bin/calibrate.rs"

[[bin]]
name = "analyze"
path = "src/bin/analyze.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
